# oathscore

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  glama.json  migrate-oathscore.sh  pyproject.toml  requirements.txt  server.json
.claude/skills/oathscore-audit/: skill.md
.claude/skills/oathscore-guardian/: skill.md
.github/workflows/: health-check.yml
docs/: ALERT_REGISTRY.md  ARCHITECTURE.md  BUSINESS_CONCEPT.md  DEPLOYMENT.md  HEALTHCHECK_SCHEDULE.md  IMPLEMENTATION_PLAN.md  INDEX.md  ISSUE_ESCALATION_PLAYBOOK.md  MCP_REGISTRATION.md  METHODOLOGY.md  REFERENCE_MANUAL.md  START_HERE.md  launch_posts.md  reddit_post.txt  sample_audit_report.md
docs/reports/: 2026-03-devto-article.txt  2026-03-state-of-financial-data-apis.md
examples/: crewai_agent.py  langchain_agent.py  market_monitor.py  trading_agent.py
migrations/: 001_initial.sql
oathscore_mcp/: __init__.py  __main__.py
public/: ai.txt  llms-full.txt  llms.txt  robots.txt  terms.txt
public/.well-known/: ai-plugin.json  security.txt  tdmrep.json
src/: aggregator.py  billing.py  config.py  events.py  exchange_status.py  main.py  mcp_server.py  rate_limit.py  volatility.py  x402.py
src/monitor/: __init__.py  accuracy_probe.py  alert_sender.py  alerts.py  config.py  docs_probe.py  freshness_probe.py  incident_tracker.py  ping_probe.py  scheduler.py  schema_probe.py  scoring.py  store.py  supabase_store.py
tests/: test_api.py
tracking/: OATHSCORE_SESSION.md  OATHSCORE_SESSION_UPDATE_20260308.md  OWNER_NOTES.md  PROJECT_TRACKER.md
(+1 files in other folders)
