[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oathscore-mcp"
version = "0.1.0"
description = "MCP server for OathScore — real-time world state and API quality ratings for trading agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
oathscore-mcp = "oathscore_mcp.__main__:main"
